--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
   </head>
   <body>
 
+    <!-- apertura conteiner -->
+    <div class="container">
+
+      <!-- apertura header -->
+      <header>
+
+      </header>
+      <!-- chiusura header -->
+
+      <!-- apertura nav_bar -->
+      <nav>
+
+      </nav>
+      <!-- chiusura nav_bar -->
+
+    </div>
+    <!-- chiusura conteiner -->
+
   </body>
 </html>
