Completamento Nav Bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 
       <!-- apertura nav_bar -->
       <nav>
-
+        <ul class="nav_bar">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">PAGE TEMPLATES</a></li>
+          <li><a href="#">A PARENT PAGE</a></li>
+          <li><a href="#">FEATURES</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
       </nav>
       <!-- chiusura nav_bar -->
 
