Completamento layout main "grezzo"
Completamento del layout della sezione subito al di sotto della navbar grazie all'uso dei semplici quadrati colorati. Si passa adesso alla realizzazione fedele come da traccia

--- a/index.html
+++ b/index.html
@@ -30,6 +30,45 @@
       </nav>
       <!-- chiusura nav_bar -->
 
+      <!-- apertura main -->
+      <main>
+
+        <!-- apertura ORGANIC THEMES -->
+        <aside class="organic_themes float_left">
+
+        </aside>
+        <!-- chiusura ORGANIC THEMES -->
+
+        <!-- apertura central_column -->
+        <div class="central_column float_left">
+
+        </div>
+        <!-- chiusura central_column -->
+
+        <div class="right_side float_left">
+          <!-- apertua TEXT_WIDGET -->
+          <aside class="text_widget float_right">
+
+          </aside>
+          <!-- chiusura TEXT_WIDGET -->
+
+          <!-- apertua TEXT_WIDGET -->
+          <aside class="text_widget float_right">
+
+          </aside>
+          <!-- chiusura TEXT_WIDGET -->
+
+          <!-- apertua TEXT_WIDGET -->
+          <aside class="text_widget float_right">
+
+          </aside>
+          <!-- chiusura TEXT_WIDGET -->
+        </div>
+
+
+      </main>
+      <!-- chiusura main -->
+
     </div>
     <!-- chiusura conteiner -->
 
