Completamento colonna main di sinistra

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <meta charset="utf-8">
     <title>Wordpress Theme</title>
+    <script src="https://kit.fontawesome.com/e343eb9713.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -35,7 +36,17 @@
 
         <!-- apertura ORGANIC THEMES -->
         <aside class="organic_themes float_left">
+          <i class="fas fa-rss"></i>
+          <h3>Organic <br> Themes</h3>
 
+          <!-- apertura lista -->
+          <ul>
+            <li><p>testo testo testo testo testo testo</p></li>
+            <li><p>testo testo testo testo testo testo</p></li>
+            <li><p>testo testo testo testo testo testo</p></li>
+            <li><p>testo testo testo testo testo testo</p></li>
+          </ul>
+          <!-- chiusura lista -->
         </aside>
         <!-- chiusura ORGANIC THEMES -->
 
@@ -47,19 +58,19 @@
 
         <div class="right_side float_left">
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget float_right">
+          <aside class="text_widget">
 
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget float_right">
+          <aside class="text_widget">
 
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget float_right">
+          <aside class="text_widget">
 
           </aside>
           <!-- chiusura TEXT_WIDGET -->
