Completamento colonna centrale e di destra

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
           <!-- apertura lista -->
           <ul>
-            <li><p>testo testo testo testo testo testo</p></li>
-            <li><p>testo testo testo testo testo testo</p></li>
-            <li><p>testo testo testo testo testo testo</p></li>
-            <li><p>testo testo testo testo testo testo</p></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
+            <li><a href="#">testo testo testo testo testo testo</a></li>
           </ul>
           <!-- chiusura lista -->
         </aside>
@@ -52,33 +54,44 @@
 
         <!-- apertura central_column -->
         <div class="central_column float_left">
-
+          <h1>THREE COLUMN</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <!-- chiusura central_column -->
 
+        <!-- apertura barra laterale DESTRA -->
         <div class="right_side float_left">
+
           <!-- apertua TEXT_WIDGET -->
           <aside class="text_widget">
-
+            <h3>TEXT WIDGET</h3>
+            <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
           <aside class="text_widget">
-
+            <h3>TEXT WIDGET</h3>
+            <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
           <aside class="text_widget">
-
+            <h3>TEXT WIDGET</h3>
+            <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
           <!-- chiusura TEXT_WIDGET -->
         </div>
-
-
+        <!-- CHIUSURA barra laterale DESTRA -->
       </main>
       <!-- chiusura main -->
+
+      <!-- apertura footer -->
+      <footer>
+
+      </footer>
+      <!-- chiusura footer -->
 
     </div>
     <!-- chiusura conteiner -->
