Completamento del footer
Footer completato e, di conseguenza, l'esercizio stesso.
Seguono eventuali operazioni di refactoring e di miglioramento dello stile grafico

--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
 
       <!-- apertura footer -->
       <footer>
-
+      <div class="top">
+        <span>Pagina realizzata da William Truppi  Class #23</span>
+        <hr>
+      </div>
+      <div class="bottom">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-github"></i>
+      </div>
       </footer>
       <!-- chiusura footer -->
 
