--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
       <!-- apertura header -->
-      <header>
+      <header class="box_shadow">
 
       </header>
       <!-- chiusura header -->
@@ -35,7 +35,7 @@
       <main>
 
         <!-- apertura ORGANIC THEMES -->
-        <aside class="organic_themes float_left">
+        <aside class="organic_themes float_left box_shadow">
           <i class="fas fa-rss"></i>
           <h3>Organic <br> Themes</h3>
 
@@ -53,7 +53,7 @@
         <!-- chiusura ORGANIC THEMES -->
 
         <!-- apertura central_column -->
-        <div class="central_column float_left">
+        <div class="central_column float_left box_shadow">
           <h1>THREE COLUMN</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
@@ -63,21 +63,21 @@
         <div class="right_side float_left">
 
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget">
+          <aside class="text_widget box_shadow">
             <h3>TEXT WIDGET</h3>
             <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget">
+          <aside class="text_widget box_shadow">
             <h3>TEXT WIDGET</h3>
             <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
           <!-- chiusura TEXT_WIDGET -->
 
           <!-- apertua TEXT_WIDGET -->
-          <aside class="text_widget">
+          <aside class="text_widget box_shadow">
             <h3>TEXT WIDGET</h3>
             <p>testo testo testo testo testo testo testo testo testo testo testo testo</p>
           </aside>
@@ -88,16 +88,16 @@
       <!-- chiusura main -->
 
       <!-- apertura footer -->
-      <footer>
-      <div class="top">
-        <span>Pagina realizzata da William Truppi  Class #23</span>
-        <hr>
-      </div>
-      <div class="bottom">
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-github"></i>
-      </div>
+      <footer class="box_shadow">
+        <div class="top">
+          <span>Pagina realizzata da William Truppi  Class #23</span>
+          <hr>
+        </div>
+        <div class="bottom">
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-github"></i>
+        </div>
       </footer>
       <!-- chiusura footer -->
 
